@@ -8,6 +8,7 @@ our $VERSION = '0.160';
 
 no if "$]" >= 5.031009, feature => 'indirect';
 no if "$]" >= 5.033001, feature => 'multidimensional';
+no if "$]" >= 5.033006, feature => 'bareword_filehandles';
 use Moose;
 with 'Dist::Zilla::Role::MintingProfile' => { -version => '5.047' };
 use File::ShareDir;
